--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@actions/core": "^1.2.0",
     "@actions/github": "^6.0.1",
-    "@vercel/ncc": "^0.38.3"
+    "@vercel/ncc": "^0.38.3",
+    "axios": "^1.11.0"
   }
 }
